# People-tracker-cv2

./: README.md  kcf_tracker.py  kcf_yolo.py  pyproject.toml  segment.py
